--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,56 @@
-# Node
+# Node.js
 node_modules/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Vite build output
+# Frontend build output
 frontend/dist/
+frontend/.vite/
+frontend/.nuxt/
 
-# VS/ .NET
-bin/
-obj/
+# Editor directories and files
+.vscode/
+.idea/
+*.iml
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
-# Environment
+# OS generated files
+.DS_Store
+.AppleDouble
+.LSOverride
+Thumbs.db
+
+# .NET build output
+**/bin/
+**/obj/
+**/out/
+*.cache
+*.vspscc
+.vs/
+TestResults/
+
+# Package manager artifacts
+backend/Packages/
+
+# Environment files
 .env
+.env.*
+!.env.example
+
+# Logs & coverage
+logs/
+coverage/
+lcov-report/
+*.lcov
+
+# Database files
+*.db
+*.sqlite
+*.mdf
+*.ldf
