--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,6 +8,13 @@
     "Audience": "ReyRecords.Frontend",
     "ExpiryMinutes": 120
   },
+  "Frontend": {
+    "Cors": {
+      "AllowedOrigins": [
+        "http://localhost:5173"
+      ]
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
